2013-10-23 Matthieu Vachon <matthieu.o.vachon@gmail.com>

	* standard/define_alias.java: Fixed a small typo in static
	initializer, the `define-private-alias` field should have
	`makePrivate` set to true by default.

2013-11-03  Per Bothner  <per@bothner.com>

	* lang/Translator.java (scanForm): Use new Values.FromArray class.
	* standard/call_with_values.java (apply): Use new
	Values#check_with method - especially a win if we can use Values2.
	* standard/read_line.java (apply): Optimize to use Values2.

2013-10-19  Per Bothner  <per@bothner.com>

	* standard/ImportFromLibrary.java (SRFI97Map): Add SRFI-101 entry.
	* standard/require.java: Likewise.

2013-10-07  Per Bothner  <per@bothner.com>

	* standard/export.java (scanForDefinitions): Handle renaming.
	* lang/Translator.java (resolveModule): Call patchSymbolFromSet
	as needed for renamed exported variables.

	* standard/Scheme.java (booleanType): Initialize eagerly.

	* repl.java (processArgs): Support '--target 8' and '--target 1.8'.

2013-09-25  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Add 'list-set!' and
	'list-copy'.

2013-09-23  Per Bothner  <per@bothner.com>

	* repl.java (processArgs): Fix a bug in previous change
	in handling of meta-arg.

2013-09-22  Per Bothner  <per@bothner.com>

	* repl.java (processArgs): Fix handling of meta-arg "\" - don't
	process injected arguments, but instead adjust args array and
	continue.  This is more flexible, and simpler.

	* repl.java (processArgs): Update copyright year.

2013-09-18  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Define "command-line-arguments".

2013-09-15  Per Bothner  <per@bothner.com>

	* standard/define_autoload.java (findAutoloadComments): Don't
	setProcedureDecl - it's not.
	(process): Update test for symbol.
	* lang/AutoloadProcedure.java (load): Invoke defineAll even if we
	find existing module instance.

2013-09-10  Per Bothner  <per@bothner.com>
